<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.helloandroid.HelloAndroid"
    android:background="#FFFFFF"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.45"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/udacity"
            android:paddingTop="20dp"
            android:scaleType="centerCrop"
            android:src="@drawable/studentsfirst" />
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="0.45"
         android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="5dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/udacity"
        android:textColor="@color/udacity_grey"
        android:textAppearance="?android:textAppearanceMedium" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingBottom="2dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/_2465_latham_st"
        android:textColor="@color/udacity_grey"
        android:textAppearance="?android:textAppearanceMedium" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingBottom="2dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/mountain_view"
        android:textColor="@color/udacity_grey"
        android:textAppearance="?android:textAppearanceMedium"
        android:contentDescription="@string/mountain_view"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingBottom="2dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/phone"
        android:textColor="@color/udacity_grey"
        android:textAppearance="?android:textAppearanceMedium"
        android:contentDescription="@string/udacity"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="2dp">
        <ImageView
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_weight="0.5"
            android:src="@drawable/androidlogo"
            android:contentDescription="@string/udacity"/>
        <ImageView
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_weight="0.5"
            android:src="@drawable/screenlogo"
            android:paddingTop="5dp"
            android:contentDescription="@string/udacity"/>
        <ImageView
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_weight="0.5"
            android:src="@drawable/searchlogo"
            android:paddingTop="5dp"
            android:contentDescription="@string/udacity"/>
        <ImageView
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_weight="0.5"
            android:src="@drawable/deeplogo"
            android:paddingTop="5dp"
            android:contentDescription="@string/udacity"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="5dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/max"
                android:textColor="@color/udacity_grey"
                android:textAppearance="?android:textAppearanceLarge"
                android:contentDescription="@string/max" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingBottom="2dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/website"
                android:textColor="@color/udacity_grey"
                android:textAppearance="?android:textAppearanceLarge" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>